bugfix: nav.scss include body overflow:hidden

--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -17,7 +17,7 @@ body {
     font-weight: 300;
     background-color: #FFFFFF;
     box-sizing: border-box;
-    overflow: hidden;
+//    overflow: hidden;
     min-height: 100%;
 }
 
