--- a/src/css/style.css
+++ b/src/css/style.css
@@ -372,7 +372,6 @@ body {
   font-weight: 300;
   background-color: #FFFFFF;
   box-sizing: border-box;
-  overflow: hidden;
   min-height: 100%; }
 
 blockquote {
